--- a/public/profile.css
+++ b/public/profile.css
@@ -228,6 +228,7 @@ header{
 .item-statistics{
     color: #3E4A58;
     font-size: 15px;
+    margin-left: 8px;
 }
 .purchaseProduct{
     margin-left: 8px;
