--- a/public/profile.css
+++ b/public/profile.css
@@ -376,9 +376,20 @@ header{
 .delete{
     background-color: red;
     border: none;
+    width: 50%;
+    height: 35px;
+    border-radius: 10px;
     color: white;
-    border: 5px solid red;
-    border-radius: 7px;
+    font-weight: 700;
+}
+.view-delete{
+    background-color: #EEEEEE;
+    border: none;
+    width: 50%;
+    height: 35px;
+    border-radius: 10px;
+    color: #3E4A58;
+    font-weight: 700;
 }
 .title-my-products{
     margin-left: 8px;
